shared-operators/k8s-kustomize-bases/observability/bosh-exporter-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bosh-exporter
  labels:
    app: bosh-exporter
spec:
  type: ClusterIP # default
  ports:
    - name: web
      port: 9190
      protocol: TCP
      targetPort: 9190 #deployment port
  selector:
    app: prometheus # prometheus pod label
