shared-operators/k8s-kustomize-bases/observability/prometheus-internal-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-internal
  labels:
    app: prometheus-internal
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
      nodePort: ${nodePort}
  selector:
    prometheus: prometheus # prometheus pod label
