shared-operators/k8s-kustomize-bases/observability/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
spec:
  type: ClusterIP # default
  ports:
    - name: web
      port: 9090
      protocol: TCP
      targetPort: web
  selector:
    prometheus: prometheus # prometheus pod label
