shared-operators/k8s-kustomize-bases/observability/prometheus-oauth2-ingress.yaml
#additionnal Ingress, same host but specific path for oauth2 proxy
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-oauth2-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "${endpoint}"
      secretName: prometheus-tls
  rules:
    - host: "${endpoint}"
      http:
        paths:
          - path: /oauth2
            pathType: ImplementationSpecific
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
